[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/mdna_core/nodes/hotspot.gd" type="Script" id=1]
[ext_resource path="res://images/rooms/6detail.jpeg" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://scenes/room6_detail.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.635, 0.635 )
texture = ExtResource( 2 )
centered = false

[node name="Hotspot" type="TextureButton" parent="."]
margin_left = 837.448
margin_top = 916.464
margin_right = 1916.45
margin_bottom = 1424.46
mouse_default_cursor_shape = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
hotspot_type = 1
target_scene = "res://scenes/room6.tscn"

[node name="Hotspot2" type="TextureButton" parent="."]
margin_left = 268.0
margin_top = 486.0
margin_right = 378.0
margin_bottom = 598.0
mouse_default_cursor_shape = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotspot3" type="TextureButton" parent="."]
margin_left = 430.0
margin_top = 538.0
margin_right = 530.0
margin_bottom = 636.0
mouse_default_cursor_shape = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotspot4" type="TextureButton" parent="."]
margin_left = 602.0
margin_top = 590.0
margin_right = 720.0
margin_bottom = 748.0
mouse_default_cursor_shape = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotspot5" type="TextureButton" parent="."]
margin_left = 770.0
margin_top = 650.0
margin_right = 892.0
margin_bottom = 788.0
mouse_default_cursor_shape = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotspot6" type="TextureButton" parent="."]
margin_left = 948.0
margin_top = 704.0
margin_right = 1102.0
margin_bottom = 858.0
mouse_default_cursor_shape = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotspot7" type="TextureButton" parent="."]
margin_left = 1134.0
margin_top = 756.0
margin_right = 1292.0
margin_bottom = 916.0
mouse_default_cursor_shape = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotspot8" type="TextureButton" parent="."]
margin_left = 1336.0
margin_top = 818.0
margin_right = 1478.0
margin_bottom = 976.0
mouse_default_cursor_shape = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotspot9" type="TextureButton" parent="."]
margin_left = 1544.0
margin_top = 878.0
margin_right = 1676.0
margin_bottom = 1032.0
mouse_default_cursor_shape = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotspot10" type="TextureButton" parent="."]
margin_left = 1774.0
margin_top = 942.0
margin_right = 1902.0
margin_bottom = 1110.0
mouse_default_cursor_shape = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotspot11" type="TextureButton" parent="."]
margin_left = 1986.0
margin_top = 990.0
margin_right = 2126.0
margin_bottom = 1134.0
mouse_default_cursor_shape = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Hotspot2" to="." method="_on_Hotspot2_pressed"]
[connection signal="pressed" from="Hotspot3" to="." method="_on_Hotspot3_pressed"]
[connection signal="pressed" from="Hotspot4" to="." method="_on_Hotspot4_pressed"]
[connection signal="pressed" from="Hotspot5" to="." method="_on_Hotspot5_pressed"]
[connection signal="pressed" from="Hotspot6" to="." method="_on_Hotspot6_pressed"]
[connection signal="pressed" from="Hotspot7" to="." method="_on_Hotspot7_pressed"]
[connection signal="pressed" from="Hotspot8" to="." method="_on_Hotspot8_pressed"]
[connection signal="pressed" from="Hotspot9" to="." method="_on_Hotspot9_pressed"]
[connection signal="pressed" from="Hotspot10" to="." method="_on_Hotspot10_pressed"]
[connection signal="pressed" from="Hotspot11" to="." method="_on_Hotspot11_pressed"]
